# software_engineering_labs

./: README.md
lab1/: README.md  workspace.dsl
lab2/: README.md  TASK.md  docker-compose.yaml  openapi.yaml
lab2/.devcontainer/: devcontainer.json
lab2/services/auth-service/: CMakeLists.txt  Dockerfile.native
lab2/services/auth-service/configs/: static_config.yaml
lab2/services/auth-service/src/: main.cpp  storage.cpp  storage.hpp
lab2/services/booking-service/: CMakeLists.txt  Dockerfile.native
lab2/services/booking-service/configs/: static_config.yaml
lab2/services/booking-service/src/: booking_handler.cpp  main.cpp  storage.cpp  storage.hpp
lab2/services/inventory-service/: CMakeLists.txt  Dockerfile.native
lab2/services/inventory-service/configs/: static_config.yaml
lab2/services/inventory-service/src/: main.cpp  storage.cpp  storage.hpp
lab2/swagger/: openapi.yaml
lab2/tests/: test_api.py
lab3/: .clangd  README.md  TASK.md  data.sql  docker-compose.yaml  optimization.md  queries.sql  schema.sql
lab3/db/: auth-init.sql  booking-init.sql  inventory-init.sql
lab3/services/: Dockerfile
lab3/services/auth-service/: CMakeLists.txt
lab3/services/auth-service/configs/: static_config.yaml
lab3/services/booking-service/: CMakeLists.txt
lab3/services/booking-service/configs/: static_config.yaml
lab3/services/booking-service/src/: main.cpp  storage.cpp  storage.hpp
lab3/services/inventory-service/: CMakeLists.txt
lab3/services/inventory-service/configs/: static_config.yaml
lab3/services/inventory-service/src/: storage.cpp  storage.hpp
lab3/tests/: conftest.py  test_requirements.txt
lab4/: README.md  TASK.md  data.js  docker-compose.yaml  openapi.yaml  queries.js  schema_design.md  validation.js
lab4/mongo-init/: 02-data.js
lab4/services/: Dockerfile
lab4/services/auth-service/src/: auth_handler.hpp  main.cpp  user_handler.cpp
lab4/services/booking-service/: CMakeLists.txt
lab4/services/booking-service/configs/: static_config.yaml
lab4/services/booking-service/src/: booking_handler.cpp  main.cpp  storage.hpp
lab4/services/inventory-service/src/: hotel_handler.cpp  main.cpp
lab4/services/shared/: jwt_utils.hpp
lab5/: README.md  TASK.md  docker-compose.yaml  performance_design.md  prometheus.yml
lab5/grafana/dashboards/: hotel-booking.json
lab5/grafana/provisioning/datasources/: prometheus.yaml
lab5/mongo-init/: 01-validation.js  03-queries.js
lab5/nginx/: nginx.conf
lab5/services/auth-service/configs/: static_config.yaml
lab5/services/auth-service/src/: auth_handler.cpp  main.cpp  storage.cpp  storage.hpp  user_handler.hpp  user_utils.hpp
lab5/services/booking-service/: CMakeLists.txt
lab5/services/booking-service/configs/: static_config.yaml
lab5/services/booking-service/src/: main.cpp  (+5 more)
lab5/services/shared/: auth_middleware.hpp
(+7 files in other folders)
